syntax = "proto2";

package youtube.api.v3;

// Service for YouTube Data API Videos resource
service V3DataVideoService {
  // Returns a list of videos that match the API request parameters.
  rpc List(VideosListRequest) returns (VideosListResponse) {}
}

message VideosListRequest {
  // The id parameter specifies a comma-separated list of the YouTube video 
  // ID(s) for the resource(s) that are being retrieved.
  optional string id = 1;

  // The part parameter specifies a comma-separated list of one or more 
  // video resource properties that the API response will include.
  repeated string part = 100;

  // The hl parameter instructs the API to retrieve localized resource 
  // metadata for a specific application language.
  optional string hl = 2;

  // The maxResults parameter specifies the maximum number of items that 
  // should be returned in the result set.
  optional uint32 max_results = 98;

  // The pageToken parameter identifies a specific page in the result set 
  // that should be returned.
  optional string page_token = 99;
}

message VideosListResponse {
  // Identifies what kind of resource this is. Value: the fixed string
  // "youtube#videoListResponse".
  optional string kind = 200;

  // Etag of this resource.
  optional string etag = 201;

  // General pagination information.
  optional PageInfo page_info = 1004;

  // The token that can be used as the value of the pageToken parameter 
  // to retrieve the next page in the result set.
  optional string next_page_token = 100602;

  // A list of videos that match the request criteria.
  repeated Video items = 1007;
}

message Video {
  // Identifies what kind of resource this is. Value: the fixed string
  // "youtube#video".
  optional string kind = 200;

  // Etag of this resource.
  optional string etag = 201;

  // The ID that YouTube uses to uniquely identify the video.
  optional string id = 101;

  // The snippet object contains basic details about the video.
  optional VideoSnippet snippet = 2;

  // The liveStreamingDetails object contains metadata about a live video 
  // broadcast. The object will only be present in a video resource if the 
  // video is an upcoming, live, or completed live broadcast.
  optional LiveStreamingDetails live_streaming_details = 32;
}

message VideoSnippet {
  // The date and time that the video was published.
  optional string published_at = 4;

  // The ID that YouTube uses to uniquely identify the channel that the 
  // video was uploaded to.
  optional string channel_id = 10101;

  // The video's title.
  optional string title = 1;

  // The video's description.
  optional string description = 2;

  // Channel title for the channel that the video belongs to.
  optional string channel_title = 3;
}

message LiveStreamingDetails {
  // The ID of the currently active live chat attached to this video. 
  // This field is filled only if the video is a currently live broadcast 
  // that has live chat. Once the broadcast transitions to complete this 
  // field will be removed and the live chat closed.
  optional string active_live_chat_id = 1;

  // The time that the broadcast actually started. This value will not be 
  // available until the broadcast begins.
  optional string actual_start_time = 2;

  // The time that the broadcast actually ended. This value will not be 
  // available until the broadcast is over.
  optional string actual_end_time = 3;

  // The time that the broadcast is scheduled to begin.
  optional string scheduled_start_time = 4;

  // The time that the broadcast is scheduled to end.
  optional string scheduled_end_time = 5;

  // The number of viewers currently watching the broadcast.
  optional uint64 concurrent_viewers = 6;
}

// Paging details for lists of resources, including total number of items
// available and number of resources returned in a single page.
message PageInfo {
  // The total number of results in the result set.
  optional int32 total_results = 1;

  // The number of results included in the API response.
  optional int32 results_per_page = 2;
}
